Adding Move Cards function to web ui
